--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "2.1.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
+    "redux-mock-store": "^1.5.3",
     "redux-saga": "^0.16.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0"
